<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="banner_ad_unit_id">ca-app-pub-4148573614510610/9951054684</string>
    <string name="app_name">Sc2VoiceBuilds</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_zerg_builds">ZergBuilds</string>
    <string name="title_activity_terran_builds">TerranBuilds</string>
    <string name="title_activity_protoss_builds">ProtossBuilds</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_support__us">Support_Us</string>
    <string name="title_activity_tcreator">TCreator</string>
    <string name="title_activity_zcreator">ZCreator</string>
    <string name="title_activity_pcreator">PCreator</string>
    <string name="colon">:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="zeroes">00</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="createBuild">Create a New Build</string>
    <string name="uploadBuild">Upload Build</string>
    <string name="select">Select Race</string>
    <string name="selectBuild">Select Build</string>
    <string name="aboutString">Hello, Welcome to the SC2VoiceBuilds Application! This application was created with intentions of providing players a better way to learn and grow in starcraft2!  This application gives the user the ability to create, and view Starcraft voice builds.  A voice build put simply, is just a recording that allows the user to follow along while in a game of starcraft.  There are many good applications to being able to do this, such as practicing new builds, creating builds for friends, or even using the builds the professionals use in their games.  Players can also share builds with friends via Uploads and download builds that other players have created.  Happy Star crafting!</string>
    <string name="search">Search</string>
    <string-array name="structures"></string-array>
    <string-array name="races"></string-array>
    <string name="racesPrompt">Select Race</string>
    <string name="selectRace">Select Race to View Builds</string>
    <string name="buildName">Build Name: </string>
    <string name="buildDescription">Description: </string>
    <string name="buildCreator">Creator: </string>
    <string name="prompt">Selections</string>

    <string-array name="units"></string-array>

    <string name="title_activity_base__creator">Base_Creator</string>
    <string name="title_activity_donators">Donators</string>

</resources>
