<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:ads="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:layout_alignParentTop="true">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size"
            android:text=""
            android:id="@+id/createRacePrompt"
            android:textColor="@color/black"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center">

        <Spinner
                android:id="@+id/structuresSpinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/structuresButton"
                android:background="@drawable/custom_button"
                android:onClick="addStructure"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center">

        <Spinner
                android:id="@+id/unitsSpinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/unitsButton"
                android:onClick="addUnit"
                android:background="@drawable/custom_button"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zeroes"
            android:id="@+id/minutesLabel"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/colon"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zeroes"
                android:id="@+id/secondsOutput"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/startButton"
                android:onClick="start"
                android:background="@drawable/custom_button"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:onClick="stop"
                android:id="@+id/stopButton"
                android:background="@drawable/custom_button"/>

        </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
            android:gravity="center" android:orientation="vertical">
    <ListView
            android:id="@+id/buildListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
            android:layout_weight="1">
    </ListView>
        <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
        </LinearLayout>
</LinearLayout>

</RelativeLayout>