<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" android:id="@+id/rr">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/mainll" android:gravity="center_horizontal"
                  android:layout_alignParentTop="true" android:layout_alignRight="@+id/button1"
                  android:layout_alignEnd="@+id/button1" android:layout_marginRight="32dp"
                  android:layout_marginEnd="32dp"
            android:layout_weight="1">
        <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:src="@drawable/zergbtn"
                android:onClick="zergClick"
                android:adjustViewBounds="true"/>

        <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:src="@drawable/terranbtn"
                android:onClick="terranClick"/>

        <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:src="@drawable/protossbtn"
                android:onClick="protossClick"/>

    </LinearLayout>

        <TextView
            android:id="@+id/userlbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainll"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/selectRace"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userlbl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/createBuild"
            android:background="@drawable/custom_button"
            android:onClick="selectRace"/>


        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/uploadBuild"
            android:layout_below="@+id/button1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="loadData"/>

    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
